# lumerical-py-scripts

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TODO.md  config.py  project_layout.py  pyproject.toml  requirements.txt  sim_registry.py  tmpclaude-bc5e-cwd  tree_chart.txt
.github/workflows/: lint.yml  update-module-counts.yml
DEVICE/: README.md
DEVICE/disk_modulator/: README.md  charge_region.py  waveguide_render.py
DEVICE/disk_modulator/ac_sweep/: getAC_RC.py
DEVICE/disk_modulator/analytical_calculations/: capacitance_analytical.py
DEVICE/disk_modulator/charge_distribution/: get_band_potential.py  get_charge_1D.py
DEVICE/disk_modulator/dc_sweep/: getDC_RC.py  voltage_sweep.py
DEVICE/disk_modulator/user_inputs/: user_materials.py  user_simulation_parameters.py  user_sweep_parameters.py
DEVICE/electro_optic/: README.md  charge_region.py  feem_region.py  waveguide_render.py
DEVICE/electro_optic/electrostatics/: get_Efield_static_2D.py  get_index_change_2D.py
DEVICE/electro_optic/mode_profile/: mode_index.py
DEVICE/electro_optic/user_inputs/: user_materials.py  user_simulation_parameters.py
DEVICE/pin_modulator/: README.md  charge_region.py  waveguide_render.py
FDTD/: README.md
FDTD/adiabatic_directional_coupler/: README.md
FDTD/adiabatic_y_branch/: README.md
FDTD/coupled_ring_coupler/: README.md
FDTD/directional_coupler/: README.md
FDTD/disk_resonator_coupler/: README.md  override_disk_coupler_region.py  override_fdtd_region.py
FDTD/edge_coupler/: README.md  override_edge_coupler_region.py  override_fdtd_region.py
FDTD/edge_coupler/fields/: getFields.py
FDTD/grating_coupler_2D/: README.md
FDTD/grating_coupler_rectangular_3D/: README.md  override_fdtd_region.py  override_grating_coupler_region.py
FDTD/mmi_couplers/: README.md
FDTD/ring_resonator_coupler/: README.md  override_fdtd_region.py  override_ring_coupler_region.py
FDTD/swg_grating/: README.md  override_fdtd_region.py  override_swg_region.py
FDTD/vertical_taper/: README.md  override_fdtd_region.py  override_vertical_taper_region.py
FDTD/waveguide-bend/: README.md  tree_chart.txt
FDTD/waveguide-mode-taper/: fdtd_region.py  waveguide_taper_render.py
FDTD/waveguide-straight/: README.md  fdtd_region.py  waveguide_render.py
FDTD/waveguide-taper/: fdtd_region.py  waveguide_taper_render.py
FDTD/waveguide_bend/: README.md  tree_chart.txt
FDTD/waveguide_crossing/: README.md
FDTD/waveguide_mode_taper/: README.md  fdtd_region.py  waveguide_taper_render.py
FDTD/waveguide_straight/: README.md  waveguide_render.py
MODE/: README.md
MODE/arrayed-waveguide-grating/: awg_box_coupler.lms
MODE/awg_star_coupler/: README.md
MODE/butt_coupling/: README.md  fde_region.py
MODE/directional-coupler/: README.md  get_mode.py  tree_chart.txt
MODE/directional_coupler/: README.md  even_odd_mode_profile.py
MODE/disk_waveguide/: README.md  fde_region.py  waveguide_render.py
MODE/edge-coupler/: README.md  gaussian_beam_render.py  tree_chart.txt
MODE/edge_coupler/: README.md  fde_region.py  gaussian_beam_render.py  waveguide_render.py
MODE/laser_tapered_waveguide/: OpticalConfinement.py  README.md
MODE/swg_grating/: README.md  override_swg_region.py  override_varfdtd_region.py
MODE/vertical-taper/: README.md  tree_chart.txt
MODE/vertical_taper/: README.md
MODE/waveguide/: README.md  fde_region.py  tree_chart.txt  waveguide_render.py
MODE/waveguide-heater/: README.md  fde_region.py  tree_chart.txt  waveguide_render.py
MODE/waveguide-straight/: fde_region.py
MODE/waveguide_heater/: README.md  fde_region.py  waveguide_render.py
(+238 files in other folders)
