[project]
name = "lumerical-py-scripts"
description = "Python automation scripts for Lumerical FDTD, MODE, and DEVICE photonic simulations"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Georgios Gcharalampous" }]
keywords = ["photonics", "lumerical", "FDTD", "MODE", "DEVICE", "waveguide", "simulation"]

[project.urls]
Repository = "https://github.com/gcharalampous/lumerical-py-scripts"

# ---------------------------------------------------------------------------
# Ruff – fast Python linter and formatter
# Docs: https://docs.astral.sh/ruff/
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
# E/W = pycodestyle errors and warnings
# F   = pyflakes (undefined names, unused imports, etc.)
# I   = isort (import ordering)
select = ["E", "W", "F", "I"]

# E501 = line too long – existing scripts pre-date this config and many have
# intentionally long lines (parameter assignments, plot labels, ASCII diagrams).
# Address incrementally when editing individual files.
extend-ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# user_inputs files use intentional wildcard imports as a flat parameter
# namespace pattern. Suppress F401 (imported but unused), F403 (star import),
# F405 (may be from star import).
"*/user_inputs/*.py" = ["F401", "F403", "F405"]
